[package]
name = "level-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
bottomless-pit = {git = "https://github.com/EggShark/bottomless-pit.git"}
# bottomless-pit = {path = "../../bottomless-pit"}
bytemuck = "1.15.0"
rfd = "0.14.1"
