[package]
name = "speed-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
level-editor = {path = "../level-editor"}
utils = {path = "../utils"}
bottomless-pit = {git = "https://github.com/EggShark/bottomless-pit.git"}
# bottomless-pit = {path = "../../bottomless-pit"}